# ai_deployment_platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/api/: __init__.py  dependencies.py
backend/api/models/: __init__.py  api_key.py  deployment.py  rag.py  user.py
backend/api/routes/: __init__.py  analytics.py  auth.py  deployments.py  health.py  playground.py  rag.py
backend/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/scripts/: seed_data.py
backend/services/: __init__.py  deployment_service.py  document_service.py  llm_service.py  rag_service.py
backend/tests/: conftest.py  test_api.py
backend/workers/: __init__.py  tasks.py
cli/: pyproject.toml  requirements.txt
cli/ai_platform/: __init__.py  client.py  config.py  main.py
docs/wireframes/: README.md  analytics-tab-spec.md  dashboard-tab-spec.md  deployment-tab-spec.md  playground-tab-spec.md  rag-tab-spec.md  settings-tab-spec.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  DeploymentDetailPage.tsx  LoginPage.tsx  (+5 more)
services/auth-iam/: config.py  main.py  models.py
shared/: __init__.py  database.py  middleware.py  models.py  redis_client.py  requirements.txt  security.py  service_client.py
(+5 files in other folders)
